website content with CNAME

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Hello Internet!</h1>
+<h1>Hello Friends!</h1>
 <p>Please visit my LinkedIn profile <a href="https://www.linkedin.com/in/thepriteshsoni/">here</a></p>
 </body>
 </html>
